Update Puzzles Lib, make entries in non_diagonal_fences tag optional, closes #4

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # environment
 forge_version=1.16.5-36.0.46
+puzzles_version=v1.0.3-1.16.5
 mappings_channel=snapshot
 mappings_version=20201028-1.16.3
 
@@ -8,12 +9,11 @@ mc_version=1.16.2
 next_mc_version=1.17
 pack_format=6
 loader_version=33
-puzzles_version=1.0.1
 
 # attributes
 mod_id=diagonalfences
 mod_name=Diagonal Fences
-mod_version=1.1
+mod_version=1.1.1
 mod_author=Fuzs
 mod_description=Fences connecting diagonally? Wait. That's illegal.
 mod_url=https://www.curseforge.com/minecraft/mc-mods/diagonal-fences
