--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 # environment
-forge_version=1.16.5-36.0.46
-puzzles_version=v1.0.3-1.16.5
-mappings_channel=snapshot
-mappings_version=20201028-1.16.3
+forge_version=1.18.2-40.0.44
+puzzles_version=v3.3.2-1.18.2
+mappings_channel=parchment
+mappings_version=2022.03.13-1.18.2
 
 # dependencies
-mc_version=1.16.2
-next_mc_version=1.17
-pack_format=6
-loader_version=33
+mc_version=1.18.2
+next_mc_version=1.19
+pack_format=8
+loader_version=40
 
 # attributes
 mod_id=diagonalfences
 mod_name=Diagonal Fences
-mod_version=1.1.1
+mod_version=2.1.1
 mod_author=Fuzs
 mod_description=Fences connecting diagonally? Wait. That's illegal.
 mod_url=https://www.curseforge.com/minecraft/mc-mods/diagonal-fences
@@ -23,4 +23,4 @@ mod_group=fuzs.diagonalfences
 # publishing
 curseProjectId=458048
 curseReleaseType=release
-curseProjectVersion=Forge, 1.16.5, 1.16.4, 1.16.3, 1.16.2
+curseProjectVersion=Forge, 1.18.2
