--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # environment
 forge_version=1.18.2-40.0.44
-puzzles_version=v3.3.2-1.18.2
+puzzles_version=v3.3.2-1.18.2-Forge
 mappings_channel=parchment
 mappings_version=2022.03.13-1.18.2
 
@@ -13,7 +13,7 @@ loader_version=40
 # attributes
 mod_id=diagonalfences
 mod_name=Diagonal Fences
-mod_version=2.1.1
+mod_version=3.0.0
 mod_author=Fuzs
 mod_description=Fences connecting diagonally? Wait. That's illegal.
 mod_url=https://www.curseforge.com/minecraft/mc-mods/diagonal-fences
