multiloader setup + fabric port

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,47 @@
-# environment
-forge_version=1.18.2-40.0.44
-puzzles_version=v3.3.2-1.18.2-Forge
-mappings_channel=parchment
-mappings_version=2022.03.13-1.18.2
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+org.gradle.parallel=true
 
-# dependencies
-mc_version=1.18.2
-next_mc_version=1.19
-pack_format=8
-loader_version=40
+# Common Project
+minecraftVersion=1.19
+minMinecraftVersion=1.19
+quiltVersion=0.17.0
+parchmentMappingsVersion=2022.05.22
+puzzlesVersion=4.0.8
+minPuzzlesVersion=4.0.8
+packFormat=9
+enableHotswap=false
+copyBuildJar=true
 
-# attributes
-mod_id=diagonalfences
-mod_name=Diagonal Fences
-mod_version=3.1.0
-mod_author=Fuzs
-mod_description=Fences connecting diagonally? Wait. That's illegal.
-mod_url=https://www.curseforge.com/minecraft/mc-mods/diagonal-fences
-mod_issue=https://github.com/Fuzss/diagonalfences/issues
-mod_group=fuzs.diagonalfences
+# Forge Project
+forgeVersion=1.19-41.0.98
+minForgeVersion=41.0.98
 
-# publishing
-curseProjectId=458048
-curseReleaseType=release
-curseProjectVersion=Forge, 1.18.2
+# Fabric Project
+fabricVersion=0.14.6
+minFabricVersion=0.14
+fabricApiVersion=0.55.2+1.19
+minFabricApiVersion=0.55.1
+
+# Mod Attributes
+modId=diagonalfences
+modName=Diagonal Fences
+modVersion=4.0.0
+modAuthor=Fuzs
+modDescription=Fences connecting diagonally? Wait. That's illegal.
+modSourceUrl=https://github.com/Fuzss/diagonalfences
+modIssueUrl=https://github.com/Fuzss/diagonalfences/issues
+modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/diagonalfences.json
+modMavenGroup=fuzs.diagonalfences
+# "MATCH_VERSION" for a mod required on both sides, "IGNORE_SERVER_VERSION" for a server only mod, "IGNORE_ALL_VERSION" for a client only mod
+modForgeDisplayTest=MATCH_VERSION
+# "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
+modFabricEnvironment=*
+
+# Mod Publishing
+projectReleaseType=release
+projectGameVersions=1.19
+projectCurseId=458048
+projectModrinthId=IKARgflD
