--- a/build.gradle
+++ b/build.gradle
@@ -1,280 +1,114 @@
-buildscript {
+apply from: './gradle/tasks.gradle'
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'java-library'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+
+    java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+    java.withSourcesJar()
+    java.withJavadocJar()
+    // silence missing javadoc comments, we just don't care
+    javadoc.options.addStringOption('Xdoclint:none', '-quiet')
 
     repositories {
-
         mavenCentral()
-        maven { url = 'https://files.minecraftforge.net/maven' }
-        maven { url = 'https://repo.spongepowered.org/maven' }
-        maven { url = 'https://maven.parchmentmc.org' }
-    }
-
-    dependencies {
-
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
-        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
-        classpath 'org.parchmentmc:librarian:1.+'
-    }
-}
-
-plugins {
-
-    id "com.matthewprenger.cursegradle" version "1.4.0"
-}
-
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'java-library'
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
-apply plugin: 'eclipse'
-apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
-
-version = "v${mod_version}-${forge_version.replaceAll("-.*", "")}"
-group = "${mod_group}"
-ext.id = "${mod_id}"
-ext.modversion = "${mod_version}"
-ext.author = "${mod_author}"
-ext.loader = "${loader_version}"
-ext.puzzles = "${puzzles_version.substring(1, puzzles_version.indexOf("-"))}"
-
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
-
-minecraft {
-
-    mappings channel: "${mappings_channel}", version: "${mappings_version}"
-//    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-
-    runs {
-
-        client {
-
-            workingDirectory project.file('run')
-            jvmArgs '-ea'
-            arg "-mixin.config=META-INF/${project.id}.mixins.json".toString()
-            properties 'mixin.env.remapRefMap': 'true'
-            property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
+        mavenLocal()
+        maven {
+            name = 'Sponge / Mixin'
+            url = 'https://repo.spongepowered.org/repository/maven-public/'
         }
-
-        server {
-
-            workingDirectory project.file('run')
-            jvmArgs '-ea'
-            arg "-mixin.config=META-INF/${project.id}.mixins.json".toString()
-            properties 'mixin.env.remapRefMap': 'true'
-            property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
+        maven {
+            name = 'Jared'
+            url = 'https://maven.blamejared.com/'
+        }
+        maven {
+            name = 'Jitpack'
+            url = 'https://jitpack.io'
+        }
+        maven {
+            name = 'Shedaniel'
+            url = 'https://maven.shedaniel.me/'
+        }
+        maven {
+            name = 'Parchment'
+            url = 'https://maven.parchmentmc.org'
+        }
+        maven {
+            name = 'Curse Maven'
+            url = 'https://cursemaven.com'
+        }
+        maven {
+            name = "Fuzs Mod Resources"
+            url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
+        }
+        flatDir {
+            dirs 'libs'
         }
     }
 
-}
+    tasks.withType(JavaCompile).configureEach {
+        // ensure that the encoding is set to UTF-8, no matter what the system default is
+        // this fixes some edge cases with special characters not displaying correctly
+        // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+        // If Javadoc is generated, this must be specified in that task too.
+        options.encoding = 'UTF-8'
+        options.release = 17
+    }
 
-repositories {
-
-    mavenLocal()
-    maven {
-        url "https://cursemaven.com"
-        content {
-            includeGroup "curse.maven"
+    tasks.withType(Jar).configureEach {
+        from rootProject.file("LICENSE")
+        from rootProject.file("CHANGELOG.md")
+        manifest {
+            attributes([
+                "Specification-Title"               : modName,
+                'Specification-Version'             : modVersion,
+                "Specification-Vendor"              : modAuthor,
+                'Implementation-Title'              : modName,
+                'Implementation-Version'            : modVersion,
+                'Implementation-Vendor'             : modAuthor,
+                'Implementation-Timestamp'          : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                'Implementation-Timestamp-Milli'    : System.currentTimeMillis(),
+                'Implementation-URL'                : modSourceUrl,
+                'Built-On-Java'                     : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
+                'Built-On-Minecraft'                : minecraftVersion
+            ])
         }
-    }
-}
-
-dependencies {
-
-    minecraft "net.minecraftforge:forge:${forge_version}"
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-
-    runtimeOnly fg.deobf("curse.maven:macaws-fences-and-walls-453925:3755729")
-
-    // local maven
-    implementation "fuzs.puzzleslib:PuzzlesLib:${puzzles_version}"
-    // try use curse maven when local maven is not available
-    // file id is end of url (7 digits usually) when on file details page on curse
-//    implementation fg.deobf("curse.maven:puzzles-lib-495476:<file-id>")
-}
-
-mixin {
-
-    add sourceSets.main, "${project.id}.refmap.json"
-}
-
-processResources {
-
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "mod_id", project.id
-    inputs.property "mod_name", "${mod_name}"
-    inputs.property "mod_version", project.modversion
-    inputs.property "mod_group", project.group
-    inputs.property "mod_url", "${mod_url}"
-    inputs.property "mod_issue", "${mod_issue}"
-    inputs.property "mod_description", "${mod_description}"
-    inputs.property "mod_author", project.author
-    inputs.property "loader_version", project.loader
-    inputs.property "forge_version", project.loader
-    inputs.property "mc_version", "${mc_version}"
-    inputs.property "next_mc_version", "${next_mc_version}"
-    inputs.property "puzzles_version", project.puzzles
-    inputs.property "pack_format", "${pack_format}"
-
-    // replace stuff in mods.toml and pack.mcmeta
-    from(sourceSets.main.resources.srcDirs) {
-
-        include 'META-INF/mods.toml', 'pack.mcmeta'
-
-        expand (
-
-                'mod_id': project.id,
-                'mod_name': "${mod_name}",
-                'mod_version': project.modversion,
-                'mod_group': project.group,
-                'mod_url': "${mod_url}",
-                'mod_issue': "${mod_issue}",
-                'mod_description': "${mod_description}",
-                'mod_author': project.author,
-                'loader_version': project.loader,
-                'forge_version': project.loader,
-                'mc_version': "${mc_version}",
-                "next_mc_version": "${next_mc_version}",
-                "puzzles_version": project.puzzles,
-                "pack_format": "${pack_format}"
-        )
-    }
-
-    // copy everything else except mods.toml and pack.mcmeta
-    from(sourceSets.main.resources.srcDirs) {
-
-        exclude 'META-INF/mods.toml', 'pack.mcmeta'
-    }
-
-    //TODO: this is ugly but seems to be required for the above to work
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
-}
-
-ext.jarAttributes = [
-
-        "Specification-Title"       : project.id,
-        "Specification-Version"     : project.modversion,
-        "Specification-Vendor"      : project.author.toLowerCase(),
-        "Implementation-Title"      : project.id,
-        "Implementation-Version"    : project.modversion,
-        "Implementation-Vendor"     : project.author.toLowerCase(),
-        "Implementation-Vendor-Id"  : project.group,
-        "Implementation-URL"        : "${mod_url}",
-        "Implementation-Timestamp"  : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-        "MixinConfigs"              : "META-INF/${project.id}.mixins.json"
-]
-
-def createJarTask(def name, def type, def sources) {
-
-    return tasks.create(name, Jar) {
-
-        from sources
-        classifier = type
-
-        manifest { attributes(project.jarAttributes) }
-        dependsOn classes
         group 'jar'
     }
-}
 
-def createSignJarTask(def name, def jarTask) {
-
-    return tasks.create(name, net.minecraftforge.gradle.common.tasks.SignJar) {
-
-        onlyIf {
-
-            project.hasProperty('keyStore')
-        }
-
-        keyStore = project.findProperty('keyStore')
-        alias = project.findProperty('keyStoreAlias')
-        storePass = project.findProperty('keyStorePass')
-        keyPass = project.findProperty('keyStoreKeyPass')
-        inputFile = outputFile = jarTask.archivePath
-        dependsOn jarTask
-        group 'jar'
+    tasks.withType(GenerateModuleMetadata) {
+        // Disables Gradle's custom module metadata from being published to maven. The
+        // metadata includes mapped dependencies which are not reasonably consumable by
+        // other mod developers.
+        enabled = false
     }
 }
 
-jar {
+import groovy.json.*
+import java.util.regex.Pattern
 
-    from sourceSets.main.output.classesDirs
-    from sourceSets.main.output.resourcesDir
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
-    manifest { attributes(project.jarAttributes) }
-    group 'jar'
-}
-
-createJarTask("deobfJar", "deobf", [sourceSets.main.output])
-createJarTask("sourceJar", "sources", sourceSets.main.allSource)
-createJarTask("javadocJar", "javadoc", javadoc)
-
-createSignJarTask("signJar", jar)
-createSignJarTask("signDeobfJar", deobfJar)
-createSignJarTask("signSourceJar", sourceJar)
-createSignJarTask("signJavadocJar", javadocJar)
-
-// finalize all jar build tasks with a signing task
-def jarTasks = tasks.findAll { task -> !task.name.startsWith('sign') && task.name.toLowerCase().contains("jar")}
-jarTasks.each { task -> task.finalizedBy tasks.getByPath("sign" + task.name.substring(0, 1).toUpperCase() + task.name.substring(1))}
-
-artifacts {
-
-//    archives deobfJar
-//    archives sourceJar
-//    archives javadocJar
-}
-
-publishing {
-
-    publications {
-
-        mavenJava (MavenPublication) {
-
-            artifact deobfJar
-            artifact sourceJar
-            artifact javadocJar
-            from components.java
-        }
+task incrementBuildNumber {
+    onlyIf { project.hasProperty('uniqueBuildNumber') }
+    doLast {
+        def propertiesName = 'gradle.properties'
+        // build number is stored in global gradle.properties
+        def propertiesFile = new File(project.gradle.gradleUserHomeDir, propertiesName)
+        if (!propertiesFile.canRead()) { throw new FileNotFoundException("Could not read file ".concat(propertiesName)) }
+        def buildNumberMatcher = Pattern.compile("uniqueBuildNumber=(\\d+)").matcher(propertiesFile.getText())
+        buildNumberMatcher.find()
+        def versionCode = Integer.parseInt(buildNumberMatcher.group(1))
+        def propertiesContent = buildNumberMatcher.replaceAll("uniqueBuildNumber=" + ++versionCode)
+        propertiesFile.write(propertiesContent)
     }
 }
 
-curseforge {
-
-    def changelogFile = file('CHANGELOG.md')
-    if (!changelogFile.getText("UTF-8").find(version)) {
-
-//        println("ERROR: Aborting upload to CurseForge: No changelog specified for version " + version)
-        return
-    }
-
-    apiKey = project.findProperty('curseApiKey')
-    project {
-
-        id = project.findProperty('curseProjectId')
-        releaseType = project.findProperty('curseReleaseType')
-        changelogType = 'markdown'
-        changelog = changelogFile
-        project.findProperty('curseProjectVersion').replaceAll(" ", "").split(",").each {version -> addGameVersion version}
-        mainArtifact jar
-        addArtifact sourceJar
-        relations {
-
-            requiredDependency 'puzzles-lib'
-        }
-    }
-
-    options {
-
-        // doesn't upload, only prints json to console
-//        debug = true
-        javaVersionAutoDetect = false
-        forgeGradleIntegration = false
-    }
+def static getNextVersion(String puzzlesVersion) {
+    def puzzlesVersionMatcher = Pattern.compile("(\\d+\\.\\d+)").matcher(puzzlesVersion)
+    puzzlesVersionMatcher.find()
+    def currentVersion = puzzlesVersionMatcher.group(1)
+    return currentVersion.substring(0, currentVersion.indexOf(".") + 1).concat(String.valueOf(Integer.parseInt(currentVersion.substring(currentVersion.indexOf(".") + 1, currentVersion.size())) + 1))
 }
-
-signing { sign publishing.publications.mavenJava }
-
-// general signing task runs before sources jar is signed otherwise
-signMavenJavaPublication.dependsOn signSourceJar
-// jar is otherwise signed before reobfuscating
-build.finalizedBy signJar
