--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ minFabricApiVersion=0.60.0
 # Mod Attributes
 modId=diagonalfences
 modName=Diagonal Fences
-modVersion=4.2.3
+modVersion=4.2.4
 modAuthor=Fuzs
 modDescription=Fences connecting diagonally? Wait. That's illegal.
 modSourceUrl=https://github.com/Fuzss/diagonalfences
@@ -40,6 +40,6 @@ modFabricEnvironment=*
 
 # Mod Publishing
 projectReleaseType=release
-projectGameVersions=1.19.1, 1.19.2
+projectGameVersions=1.19.2
 projectCurseId=458048
 projectModrinthId=IKARgflD
