--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -29,10 +29,6 @@ repositories {
         name = "jamieswhiteshirt"
         url = "https://maven.jamieswhiteshirt.com/libs-release/"
     }
-    maven {
-        name 'Gegy'
-        url 'https://maven.gegy.dev'
-    }
 }
 
 dependencies {
@@ -43,22 +39,16 @@ dependencies {
     minecraft "com.mojang:minecraft:${minecraftVersion}"
     mappings loom.layered() {
         officialMojangMappings()
-        parchment("org.parchmentmc.data:parchment-${minecraftVersion}:${parchmentMappingsVersion}@zip")
+        parchment("org.parchmentmc.data:parchment-${parchmentMinecraftVersion}:${parchmentMappingsVersion}@zip")
     }
 
     // Fabric
     modImplementation "net.fabricmc:fabric-loader:${fabricVersion}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabricApiVersion}"
 
-    // Forge Configs
-    modImplementation "net.minecraftforge:forgeconfigapiport-fabric:4.2.0"
-
-    // Mod Menu
+    // Quality of Life Mods
     modRuntimeOnly "com.terraformersmc:modmenu:4.0.6"
-
-    // Lambda Better Grass
-    modImplementation "dev.lambdaurora:spruceui:4.0.0+1.19"
-    modImplementation "curse.maven:lambdabettergrass-400322:3834055"
+    modRuntimeOnly "curse.maven:tooltipfix-411557:3820437"
 
     // Puzzles Lib
     modImplementation "fuzs.puzzleslib:puzzleslib-fabric:${puzzlesVersion}"
@@ -86,9 +76,18 @@ loom {
 }
 
 processResources {
-    from project(":Common").sourceSets.main.resources
-    // we need to have this in common so that in a non-production environment the common jar is correctly deobfuscated
-    exclude("**/quilt.mod.json")
+    from(project(":Common").sourceSets.main.resources) {
+        // we need to have this in common so that in a non-production environment the common jar is correctly deobfuscated
+        exclude("quilt.mod.json")
+    }
+    from(project(":Forge").file('src/generated/resources')) {
+        exclude('.cache/')
+    }
+    // Forge's data gen doesn't work with assets placed in the common project, so we place them in Forge and include them here
+    from(project(":Forge").sourceSets.main.resources) {
+        include("assets/")
+        include("data/")
+    }
 
     duplicatesStrategy DuplicatesStrategy.INCLUDE
 
@@ -103,12 +102,11 @@ processResources {
     inputs.property "modAuthor", 				"${modAuthor}"
     inputs.property "minFabricVersion", 		"${minFabricVersion}"
     inputs.property "minFabricApiVersion", 		"${minFabricApiVersion}"
-    inputs.property "minMinecraftVersion", 		"${minMinecraftVersion}"
-    inputs.property "nextMinecraftVersion", 	rootProject.getNextVersion("${minMinecraftVersion}")
-	inputs.property "minPuzzlesVersion", 		"${minPuzzlesVersion}"
+    inputs.property "minecraftVersion", 		"${minecraftVersion}"
+    inputs.property "minPuzzlesVersion", 		"${minPuzzlesVersion}"
     inputs.property "packFormat", 				"${packFormat}"
-	inputs.property "mainEntryPoint", 			"${project.group}.${rootProject.name}Fabric"
-	inputs.property "clientEntryPoint", 		"${project.group}.client.${rootProject.name}FabricClient"
+    inputs.property "mainEntryPoint", 			"${project.group}.${rootProject.name}Fabric"
+    inputs.property "clientEntryPoint", 		"${project.group}.client.${rootProject.name}FabricClient"
     inputs.property "modFabricEnvironment", 	"${modFabricEnvironment}"
 
     // replace stuff in fabric.mod.json and pack.mcmeta
@@ -124,11 +122,10 @@ processResources {
                 'modAuthor':            	"${modAuthor}",
                 'minFabricVersion':     	"${minFabricVersion}",
                 'minFabricApiVersion':  	"${minFabricApiVersion}",
-                'minMinecraftVersion':  	"${minMinecraftVersion}",
-                "nextMinecraftVersion": 	rootProject.getNextVersion("${minMinecraftVersion}"),
-				"minPuzzlesVersion":    	"${minPuzzlesVersion}",
-				"mainEntryPoint": 			"${project.group}.${rootProject.name}Fabric",
-				"clientEntryPoint": 		"${project.group}.client.${rootProject.name}FabricClient",
+                'minecraftVersion':  	    "${minecraftVersion}",
+                "minPuzzlesVersion":    	"${minPuzzlesVersion}",
+                "mainEntryPoint": 			"${project.group}.${rootProject.name}Fabric",
+                "clientEntryPoint": 		"${project.group}.client.${rootProject.name}FabricClient",
                 "modFabricEnvironment":		"${modFabricEnvironment}"
         )
     }
@@ -191,7 +188,7 @@ publishing {
                 pom.withXml {
                     asNode().dependencies.dependency.each { dep ->
                         // use this approach to make excluding dependencies from Curse Maven more convenient
-                        if (["com.terraformersmc:modmenu"].stream().anyMatch(mod -> "${dep.groupId.last().value().last()}:${dep.artifactId.last().value().last()}".startsWith(mod))) {
+                        if (["curse.maven:", "com.terraformersmc:modmenu"].stream().anyMatch(mod -> "${dep.groupId.last().value().last()}:${dep.artifactId.last().value().last()}".startsWith(mod))) {
                             assert dep.parent().remove(dep)
                         }
                     }
@@ -231,7 +228,7 @@ curseforge {
                 requiredDependency 'puzzles-lib'
             }
         }
-        addArtifact sourcesJar
+//        addArtifact sourcesJar
     }
     options {
 //        debug = true
@@ -253,7 +250,7 @@ modrinth {
         gameVersions.add it.trim()
     }
     loaders.add 'fabric'
-    additionalFiles.add file("${project.buildDir}/libs/${project.archivesBaseName}-${project.version}-sources.jar")
+//    additionalFiles.add file("${project.buildDir}/libs/${project.archivesBaseName}-${project.version}-sources.jar")
     dependencies {
         required.project 'fabric-api'
         required.project 'forge-config-api-port'
@@ -261,8 +258,6 @@ modrinth {
     }
 //	debugMode = true
 }
-
-import groovy.json.*
 
 task copyJarToDir(type: Copy) {
     onlyIf { project.hasProperty('buildJarOutputDir') && project.hasProperty('uniqueBuildNumber') }
