--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ org.gradle.parallel=true
 
 # Common Project
 minecraftVersion=1.19.2
-minMinecraftVersion=1.19.1
 parchmentMappingsVersion=2022.08.14
+parchmentMinecraftVersion=1.19.2
 puzzlesVersion=4.3.10
 minPuzzlesVersion=4.3.10
 packFormat=9
