--- a/gradle.properties
+++ b/gradle.properties
@@ -5,28 +5,28 @@ org.gradle.daemon=false
 org.gradle.parallel=true
 
 # Common Project
-minecraftVersion=1.19.2
-parchmentMappingsVersion=2022.08.14
-parchmentMinecraftVersion=1.19.2
-puzzlesVersion=4.3.10
-minPuzzlesVersion=4.3.10
-packFormat=9
+minecraftVersion=1.19.3
+parchmentMappingsVersion=2023.03.12
+puzzlesVersion=5.0.14
+minPuzzlesVersion=5.0.14
+resourcePackFormat=12
+dataPackFormat=10
 copyBuildJar=true
 
 # Forge Project
-forgeVersion=1.19.2-43.1.1
-minForgeVersion=42.0.0
+forgeVersion=1.19.3-44.1.23
+minForgeVersion=44.1.0
 
 # Fabric Project
-fabricVersion=0.14.9
-minFabricVersion=0.14
-fabricApiVersion=0.60.0+1.19.2
-minFabricApiVersion=0.60.0
+fabricVersion=0.14.17
+minFabricVersion=0.14.0
+fabricApiVersion=0.76.0+1.19.3
+minFabricApiVersion=0.72.0
 
 # Mod Attributes
 modId=diagonalfences
 modName=Diagonal Fences
-modVersion=4.2.4
+modVersion=5.0.0
 modAuthor=Fuzs
 modDescription=Fences connecting diagonally? Wait. That's illegal.
 modSourceUrl=https://github.com/Fuzss/diagonalfences
@@ -40,6 +40,6 @@ modFabricEnvironment=*
 
 # Mod Publishing
 projectReleaseType=release
-projectGameVersions=1.19.2
+projectGameVersions=1.19.3
 projectCurseId=458048
 projectModrinthId=IKARgflD
