--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,37 @@
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
 # environment
-forge_version=1.18.2-40.0.44
-puzzles_version=v3.3.2-1.18.2-Forge
-mappings_channel=parchment
-mappings_version=2022.03.13-1.18.2
+minecraftVersion=1.18.2
+projectLoader=Forge
+forgeVersion=1.18.2-40.2.2
+puzzlesVersion=v3.3.5-1.18.2-Forge
+mappingsChannel=official
+mappingsVersion=1.18.2
+enableHotswap=false
+copyBuildJar=true
 
 # dependencies
-mc_version=1.18.2
-next_mc_version=1.19
-pack_format=8
-loader_version=40
+minForgeVersion=40
+minMinecraftVersion=1.18.2
+minPuzzlesVersion=3.3.0
+packFormat=8
 
 # attributes
-mod_id=diagonalfences
-mod_name=Diagonal Fences
-mod_version=3.1.0
-mod_author=Fuzs
-mod_description=Fences connecting diagonally? Wait. That's illegal.
-mod_url=https://www.curseforge.com/minecraft/mc-mods/diagonal-fences
-mod_issue=https://github.com/Fuzss/diagonalfences/issues
-mod_group=fuzs.diagonalfences
+modId=diagonalfences
+modName=Diagonal Fences
+modVersion=3.1.1
+modAuthor=Fuzs
+modDescription=Fences connecting diagonally? Wait. That's illegal.
+modPageUrl=https://www.curseforge.com/minecraft/mc-mods/diagonal-fences
+modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/diagonalfences.json
+modIssueUrl=https://github.com/Fuzss/diagonalfences/issues
+modSourceUrl=https://github.com/Fuzss/diagonalfences
+modGroup=fuzs.diagonalfences
 
 # publishing
 curseProjectId=458048
 curseReleaseType=release
-curseProjectVersion=Forge, 1.18.2
+curseProjectVersion=1.18.2
