--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,33 +1,39 @@
 modLoader="javafml"
-loaderVersion="[${loader_version},)"
+loaderVersion="[${minForgeVersion},)"
 license="Mozilla Public License 2.0"
-issueTrackerURL="${mod_issue}"
+issueTrackerURL="${modIssueUrl}"
 
 [[mods]]
-    modId="${mod_id}"
-    displayName="${mod_name}"
-    description="${mod_description}"
-    version="${mod_version}"
-    authors="${mod_author}"
-    displayURL="${mod_url}"
+    modId="${modId}"
+    displayName="${modName}"
+    description="${modDescription}"
+    version="${modVersion}"
+    authors="${modAuthor}"
+    logoFile="mod_banner.png"
+    logoBlur=false
+    displayURL="${modPageUrl}"
+    updateJSONURL="${modUpdateUrl}"
 
-[[dependencies.${mod_id}]]
+[[dependencies.${modId}]]
     modId="forge"
     mandatory=true
-    versionRange="[${forge_version},)"
+    versionRange="[${minForgeVersion},)"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.${mod_id}]]
+[[dependencies.${modId}]]
     modId="minecraft"
     mandatory=true
-    versionRange="[${mc_version},${next_mc_version})"
+    versionRange="[${minMinecraftVersion},${nextMinecraftVersion})"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.${mod_id}]]
+[[dependencies.${modId}]]
     modId="puzzleslib"
     mandatory=true
-    versionRange="[${puzzles_version},)"
+    versionRange="[${minPuzzlesVersion},)"
     ordering="NONE"
     side="BOTH"
+
+[modproperties.${modId}]
+    catalogueImageIcon="mod_logo.png"
