--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,19 @@
 buildscript {
-
     repositories {
-
         mavenCentral()
-        maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://maven.minecraftforge.net' }
         maven { url = 'https://repo.spongepowered.org/maven' }
         maven { url = 'https://maven.parchmentmc.org' }
+        maven { url = "https://cursemaven.com" }
     }
-
     dependencies {
-
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
-        classpath 'org.parchmentmc:librarian:1.+'
+        classpath group: 'org.parchmentmc', name: 'librarian', version: '1.+'
     }
 }
 
 plugins {
-
     id "com.matthewprenger.cursegradle" version "1.4.0"
 }
 
@@ -29,147 +25,136 @@ apply plugin: 'eclipse'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
-version = "v${mod_version}-${forge_version.replaceAll("-.*", "")}"
-group = "${mod_group}"
-ext.id = "${mod_id}"
-ext.modversion = "${mod_version}"
-ext.author = "${mod_author}"
-ext.loader = "${loader_version}"
-ext.puzzles = "${puzzles_version.substring(1, puzzles_version.indexOf("-"))}"
-
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
+
+ext.mcversion = "${minecraftVersion}"
+ext.modversion = "${modVersion}"
+version = "v${project.modversion}-${project.mcversion}-${project.projectLoader}"
+group = "${modGroup}"
+ext.modid = "${modId}"
+ext.modauthor = "${modAuthor}"
+ext.nextmcversion = getNextVersion(project.mcversion)
+ext.puzzlesversion = "${puzzlesVersion.substring(1, puzzlesVersion.indexOf("-"))}"
 
 minecraft {
-
-    mappings channel: "${mappings_channel}", version: "${mappings_version}"
-//    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-
+    mappings channel: "${mappingsChannel}", version: "${mappingsVersion}"
     runs {
-
         client {
-
-            workingDirectory project.file('run')
-            jvmArgs '-ea'
-            arg "-mixin.config=META-INF/${project.id}.mixins.json".toString()
-            properties 'mixin.env.remapRefMap': 'true'
-            property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
+            // https://forums.minecraftforge.net/topic/82228-1152-3110-intellij-and-gradlew-forge-hotswap-and-dcevm-tutorial/
+            if (project.hasProperty('hotswapAgent') && project.findProperty('enableHotswap').toBoolean()) {
+                jvmArgs '-ea', '-Xms1G', '-Xmx4G', '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5010', '-XXaltjvm=dcevm', '-XX:+UnlockExperimentalVMOptions', "-javaagent:${hotswapAgent}"
+            } else {
+                jvmArgs '-ea', '-Xms1G', '-Xmx4G'
+            }
+            property 'fml.earlyprogresswindow', 'false'
+            // mixin properties
+            args '--mixin.config', "META-INF/${project.modid}.mixins.json".toString()
+            properties 'mixin.env.remapRefMap': 'true', 'mixin.env.refMapRemappingFile': "${project.projectDir}/build/createSrgToMcp/output.srg".toString(), 'mixin.debug.export': 'true'
         }
-
         server {
-
-            workingDirectory project.file('run')
-            jvmArgs '-ea'
-            arg "-mixin.config=META-INF/${project.id}.mixins.json".toString()
-            properties 'mixin.env.remapRefMap': 'true'
-            property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
+            jvmArgs '-ea', '-Xms1G', '-Xmx4G'
+            arg 'nogui'
+            // mixin properties
+            args '--mixin.config', "META-INF/${project.modid}.mixins.json".toString()
+            properties 'mixin.env.remapRefMap': 'true', 'mixin.env.refMapRemappingFile': "${project.projectDir}/build/createSrgToMcp/output.srg".toString(), 'mixin.debug.export': 'true'
+        }
+        data {
+            args '--mod', "${project.modid}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
         }
     }
-
 }
 
 repositories {
-
     mavenLocal()
-    maven {
-        url "https://cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
-    }
+    maven { url = "https://cursemaven.com" }
 }
 
 dependencies {
-
-    minecraft "net.minecraftforge:forge:${forge_version}"
+    minecraft "net.minecraftforge:forge:${forgeVersion}"
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    runtimeOnly fg.deobf("curse.maven:macaws-fences-and-walls-453925:3755729")
+    // don't enable these for puzzles, they'll be forced upon all dependencies then via maven
+    runtimeOnly fg.deobf("curse.maven:catalogue-459701:3721991")
+    runtimeOnly fg.deobf("curse.maven:bettermodsbutton-541584:3740055")
+    runtimeOnly fg.deobf("curse.maven:configmenusforge-544048:3671318")
 
-    // local maven
-    implementation "fuzs.puzzleslib:PuzzlesLib:${puzzles_version}"
+    // from local maven, those builds are not obfuscated
+    implementation fg.deobf("fuzs.puzzleslib:PuzzlesLib:${puzzlesVersion}")
     // try use curse maven when local maven is not available
     // file id is end of url (7 digits usually) when on file details page on curse
-//    implementation fg.deobf("curse.maven:puzzles-lib-495476:<file-id>")
+//    implementation fg.deobf("curse.maven:puzzles-lib:<file-id>")
 }
 
 mixin {
-
-    add sourceSets.main, "${project.id}.refmap.json"
+    add sourceSets.main, "META-INF/${project.modid}.refmap.json"
 }
 
 processResources {
+    duplicatesStrategy DuplicatesStrategy.INCLUDE
 
     // this will ensure that this task is redone when the versions change.
-    inputs.property "mod_id", project.id
-    inputs.property "mod_name", "${mod_name}"
-    inputs.property "mod_version", project.modversion
-    inputs.property "mod_group", project.group
-    inputs.property "mod_url", "${mod_url}"
-    inputs.property "mod_issue", "${mod_issue}"
-    inputs.property "mod_description", "${mod_description}"
-    inputs.property "mod_author", project.author
-    inputs.property "loader_version", project.loader
-    inputs.property "forge_version", project.loader
-    inputs.property "mc_version", "${mc_version}"
-    inputs.property "next_mc_version", "${next_mc_version}"
-    inputs.property "puzzles_version", project.puzzles
-    inputs.property "pack_format", "${pack_format}"
+    inputs.property "modId", project.modid
+    inputs.property "modName", "${modName}"
+    inputs.property "modVersion", project.modversion
+    inputs.property "modGroup", project.group
+    inputs.property "modPageUrl", "${modPageUrl}"
+    inputs.property "modUpdateUrl", "${modUpdateUrl}"
+    inputs.property "modIssueUrl", "${modIssueUrl}"
+    inputs.property "modDescription", "${modDescription}"
+    inputs.property "modAuthor", project.modauthor
+    inputs.property "minForgeVersion", "${minForgeVersion}"
+    inputs.property "minMinecraftVersion", "${minMinecraftVersion}"
+    inputs.property "nextMinecraftVersion", project.nextmcversion
+    inputs.property "minPuzzlesVersion", "${minPuzzlesVersion}"
+    inputs.property "packFormat", "${packFormat}"
 
     // replace stuff in mods.toml and pack.mcmeta
-    from(sourceSets.main.resources.srcDirs) {
-
-        include 'META-INF/mods.toml', 'pack.mcmeta'
-
+    filesMatching ('META-INF/mods.toml') {
         expand (
-
-                'mod_id': project.id,
-                'mod_name': "${mod_name}",
-                'mod_version': project.modversion,
-                'mod_group': project.group,
-                'mod_url': "${mod_url}",
-                'mod_issue': "${mod_issue}",
-                'mod_description': "${mod_description}",
-                'mod_author': project.author,
-                'loader_version': project.loader,
-                'forge_version': project.loader,
-                'mc_version': "${mc_version}",
-                "next_mc_version": "${next_mc_version}",
-                "puzzles_version": project.puzzles,
-                "pack_format": "${pack_format}"
+                'modId':                project.modid,
+                'modName':              "${modName}",
+                'modVersion':           project.modversion,
+                'modGroup':             project.group,
+                'modPageUrl':           "${modPageUrl}",
+                'modUpdateUrl':         "${modUpdateUrl}",
+                'modIssueUrl':          "${modIssueUrl}",
+                'modDescription':       "${modDescription}",
+                'modAuthor':            project.modauthor,
+                'minForgeVersion':      "${minForgeVersion}",
+                'minMinecraftVersion':  "${minMinecraftVersion}",
+                "nextMinecraftVersion": project.nextmcversion,
+                "minPuzzlesVersion":    "${minPuzzlesVersion}"
         )
     }
 
-    // copy everything else except mods.toml and pack.mcmeta
-    from(sourceSets.main.resources.srcDirs) {
-
-        exclude 'META-INF/mods.toml', 'pack.mcmeta'
+    filesMatching ('pack.mcmeta') {
+        expand (
+                'modDescription':       "${modDescription}",
+                "packFormat":           "${packFormat}"
+        )
     }
-
-    //TODO: this is ugly but seems to be required for the above to work
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 ext.jarAttributes = [
-
-        "Specification-Title"       : project.id,
+        "Specification-Title"       : project.modid,
         "Specification-Version"     : project.modversion,
-        "Specification-Vendor"      : project.author.toLowerCase(),
-        "Implementation-Title"      : project.id,
+        "Specification-Vendor"      : project.modauthor.toLowerCase(),
+        "Implementation-Title"      : project.modid,
         "Implementation-Version"    : project.modversion,
-        "Implementation-Vendor"     : project.author.toLowerCase(),
+        "Implementation-Vendor"     : project.modauthor.toLowerCase(),
         "Implementation-Vendor-Id"  : project.group,
-        "Implementation-URL"        : "${mod_url}",
+        "Implementation-URL"        : "${modPageUrl}",
         "Implementation-Timestamp"  : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-        "MixinConfigs"              : "META-INF/${project.id}.mixins.json"
+        "MixinConfigs"              : "META-INF/${project.modid}.mixins.json"
 ]
 
 def createJarTask(def name, def type, def sources) {
-
     return tasks.create(name, Jar) {
-
         from sources
+        from rootProject.file("LICENSE")
+        from rootProject.file("CHANGELOG.md")
         classifier = type
-
         manifest { attributes(project.jarAttributes) }
         dependsOn classes
         group 'jar'
@@ -177,14 +162,8 @@ def createJarTask(def name, def type, def sources) {
 }
 
 def createSignJarTask(def name, def jarTask) {
-
     return tasks.create(name, net.minecraftforge.gradle.common.tasks.SignJar) {
-
-        onlyIf {
-
-            project.hasProperty('keyStore')
-        }
-
+        onlyIf { project.hasProperty('keyStore') }
         keyStore = project.findProperty('keyStore')
         alias = project.findProperty('keyStoreAlias')
         storePass = project.findProperty('keyStorePass')
@@ -196,75 +175,64 @@ def createSignJarTask(def name, def jarTask) {
 }
 
 jar {
-
     from sourceSets.main.output.classesDirs
     from sourceSets.main.output.resourcesDir
-
+    from rootProject.file("LICENSE")
+    from rootProject.file("CHANGELOG.md")
     manifest { attributes(project.jarAttributes) }
     group 'jar'
 }
 
-createJarTask("deobfJar", "deobf", [sourceSets.main.output])
+//createJarTask("deobfJar", "deobf", [sourceSets.main.output])
 createJarTask("sourceJar", "sources", sourceSets.main.allSource)
 createJarTask("javadocJar", "javadoc", javadoc)
-
 createSignJarTask("signJar", jar)
-createSignJarTask("signDeobfJar", deobfJar)
+//createSignJarTask("signDeobfJar", deobfJar)
 createSignJarTask("signSourceJar", sourceJar)
 createSignJarTask("signJavadocJar", javadocJar)
 
 // finalize all jar build tasks with a signing task
-def jarTasks = tasks.findAll { task -> !task.name.startsWith('sign') && task.name.toLowerCase().contains("jar")}
-jarTasks.each { task -> task.finalizedBy tasks.getByPath("sign" + task.name.substring(0, 1).toUpperCase() + task.name.substring(1))}
+def jarTasks = [jar, sourceJar, javadocJar]
+jarTasks.each { task -> task.finalizedBy tasks.findByName("sign" + task.name.substring(0, 1).toUpperCase() + task.name.substring(1))}
+
+signJar.mustRunAfter 'reobfJar'
+jar.finalizedBy 'reobfJar'
 
 artifacts {
-
+    archives jar
 //    archives deobfJar
 //    archives sourceJar
 //    archives javadocJar
 }
 
 publishing {
-
     publications {
-
         mavenJava (MavenPublication) {
-
-            artifact deobfJar
+//            artifact deobfJar
+            artifact jar
             artifact sourceJar
             artifact javadocJar
-            from components.java
         }
     }
 }
 
 curseforge {
-
-    def changelogFile = file('CHANGELOG.md')
-    if (!changelogFile.getText("UTF-8").find(version)) {
-
-//        println("ERROR: Aborting upload to CurseForge: No changelog specified for version " + version)
-        return
-    }
-
-    apiKey = project.findProperty('curseApiKey')
+    def changelogName = 'CHANGELOG.md'
+    def changelogFile = file(changelogName)
+    if (!changelogFile.canRead()) { throw new FileNotFoundException("Could not read file ".concat(changelogName)) }
+    apiKey = project.findProperty('curseApiToken')
     project {
-
         id = project.findProperty('curseProjectId')
-        releaseType = project.findProperty('curseReleaseType')
         changelogType = 'markdown'
         changelog = changelogFile
-        project.findProperty('curseProjectVersion').replaceAll(" ", "").split(",").each {version -> addGameVersion version}
+        releaseType = project.findProperty('curseReleaseType')
+        addGameVersion project.findProperty('projectLoader')
+        project.findProperty('curseProjectVersion').replaceAll(" ", "").split(",").each { version -> addGameVersion version }
         mainArtifact jar
-        addArtifact sourceJar
-        relations {
-
-            requiredDependency 'puzzles-lib'
-        }
+//        addArtifact sourceJar
+        relations { requiredDependency 'puzzles-lib' }
     }
-
     options {
-
         // doesn't upload, only prints json to console
 //        debug = true
         javaVersionAutoDetect = false
@@ -272,9 +240,96 @@ curseforge {
     }
 }
 
-signing { sign publishing.publications.mavenJava }
+task copyJarToDir(type: Copy) {
+    onlyIf { project.hasProperty('buildJarOutputDir') && project.hasProperty('uniqueBuildNumber') }
+    if (project.findProperty('copyBuildJar').toBoolean()) {
+        // shortcut for jar.outputs.files
+        from jar
+        into project.findProperty('buildJarOutputDir')
+        // add build number to be able to distinguish jars when testing thorough official launcher
+        // build number is stored in global gradle.properties
+        rename { fileName -> fileName.replace("v${project.modversion}", "v${project.modversion}.${uniqueBuildNumber}") }
+    }
+}
+
+task incrementBuildNumber {
+    onlyIf { project.hasProperty('uniqueBuildNumber') }
+    doLast {
+        def propertiesName = 'gradle.properties'
+        // build number is stored in global gradle.properties
+        def propertiesFile = new File(project.gradle.gradleUserHomeDir, propertiesName)
+        if (!propertiesFile.canRead()) { throw new FileNotFoundException("Could not read file ".concat(propertiesName)) }
+        def buildNumberMatcher = Pattern.compile("uniqueBuildNumber=(\\d+)").matcher(propertiesFile.getText())
+        buildNumberMatcher.find()
+        def versionCode = Integer.parseInt(buildNumberMatcher.group(1))
+        def propertiesContent = buildNumberMatcher.replaceAll("uniqueBuildNumber=" + ++versionCode)
+        propertiesFile.write(propertiesContent)
+    }
+}
+
+task refreshUpdateJson {
+
+    onlyIf {
+
+        project.hasProperty('modResources')
+    }
+
+    doLast {
+
+        def updateFile = file(project.findProperty('modResources').concat(File.separator).concat('update').concat(File.separator).concat(project.modid).concat('.json'))
+        def updateJson
+        if (updateFile.exists() && updateFile.canRead()) {
+
+            updateJson = new JsonSlurper().parseText(updateFile.text)
+            project.findProperty('curseProjectVersion').replaceAll(" ", "").split(",").each { version ->
+
+                updateJson['promos']["${version}-latest"] = project.modversion
+                // alpha and beta releases will contain 'a' or 'b' char respectively, don't update recommended for those
+                if (project.modversion.matches("[^a-zA-Z]+")) {
+
+                    updateJson['promos']["${version}-recommended"] = project.modversion
+                }
+            }
+        } else {
+
+            def builder = new JsonBuilder()
+            updateJson = builder {
+                homepage "${modPageUrl}"
+                promos { project.findProperty('curseProjectVersion').replaceAll(" ", "").split(",").each { version ->
+
+                    "${version}-latest" project.modversion
+                    // alpha and beta releases will contain 'a' or 'b' char respectively, don't update recommended for those
+                    if (project.modversion.matches("[^a-zA-Z]+")) {
+
+                        "${version}-recommended" project.modversion
+                    }
+                } }
+            }
+        }
+
+        def output = new JsonOutput()
+        updateFile.write(output.prettyPrint(output.toJson(updateJson)))
+    }
+}
+
+import groovy.json.*
+import java.util.regex.Pattern
+
+def static getNextVersion(String puzzlesVersion) {
+    def puzzlesVersionMatcher = Pattern.compile("(\\d+\\.\\d+)").matcher(puzzlesVersion)
+    puzzlesVersionMatcher.find()
+    def currentVersion = puzzlesVersionMatcher.group(1)
+    return currentVersion.substring(0, currentVersion.indexOf(".") + 1).concat(String.valueOf(Integer.parseInt(currentVersion.substring(currentVersion.indexOf(".") + 1, currentVersion.size())) + 1))
+}
+
+signing {
+    sign publishing.publications.mavenJava
+}
 
 // general signing task runs before sources jar is signed otherwise
-signMavenJavaPublication.dependsOn signSourceJar
-// jar is otherwise signed before reobfuscating
-build.finalizedBy signJar
+signMavenJavaPublication.dependsOn project.signSourceJar
+
+tasks.getByPath('curseforge').finalizedBy project.refreshUpdateJson
+// only copy when building manually
+project.copyJarToDir.dependsOn signJar
+build.finalizedBy project.copyJarToDir, project.incrementBuildNumber
