--- a/1.19/gradle.properties
+++ b/1.19/gradle.properties
@@ -9,7 +9,7 @@ copyBuildJar=true
 modId=diagonalfences
 modName=Diagonal Fences
 modVersion=4.2.6
-modAuthor=Fuzs
+modAuthor=Fuzs, XFactHD
 modDescription=Fences connecting diagonally? Wait. That's illegal.
 modLicense=MPL-2.0
 modSourceUrl=https://github.com/Fuzss/diagonalfences
