experimental support for modern fix mod

--- a/1.20/gradle.properties
+++ b/1.20/gradle.properties
@@ -26,8 +26,16 @@ projectReleaseType=release
 projectCurseForgeId=458048
 projectModrinthId=IKARgflD
 
-dependenciesVersionCatalog=1.20.1-v4
+dependenciesVersionCatalog=1.20.1-v18
+dependenciesPuzzlesLibVersion=8.0.36
+dependenciesMinPuzzlesLibVersion=8.0.36
 dependenciesRequiredForgeCurseForge=puzzles-lib
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredForgeModrinth=puzzles-lib
 dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
+dependenciesOptionalForgeCurseForge=config-menus-forge
+dependenciesOptionalFabricCurseForge=config-menus-forge
+dependenciesOptionalForgeModrinth=forge-config-screens
+dependenciesOptionalFabricModrinth=forge-config-screens
+#dependenciesEmbeddedFabricCurseForge=cardinal-components
+#dependenciesEmbeddedFabricModrinth=cardinal-components-api
