update puzzles lib

--- a/1.20.4/gradle.properties
+++ b/1.20.4/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=diagonalblocks
 modName=Diagonal Blocks
-modVersion=20.4.1
+modVersion=20.4.2
 modAuthor=Fuzs, XFactHD
 modDescription=The core library behind the diagonal blocks mod series!
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.20.4-v10
-dependenciesPuzzlesLibVersion=20.4.2
-dependenciesMinPuzzlesLibVersion=20.4.2
+dependenciesVersionCatalog=1.20.4-v16
+#dependenciesPuzzlesLibVersion=20.4.2
+#dependenciesMinPuzzlesLibVersion=20.4.2
 
 # Mod Publishing
 projectReleaseType=release
@@ -41,6 +41,3 @@ dependenciesOptionalForgeCurseForge=config-menus-forge
 dependenciesOptionalFabricModrinth=forge-config-screens
 dependenciesOptionalNeoForgeModrinth=forge-config-screens
 dependenciesOptionalForgeModrinth=forge-config-screens
-
-#dependenciesEmbeddedFabricCurseForge=cardinal-components-api
-#dependenciesEmbeddedFabricModrinth=cardinal-components-api
