allow for toggling between diagonal blocks

--- a/1.21/gradle.properties
+++ b/1.21/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=diagonalblocks
 modName=Diagonal Blocks
-modVersion=21.0.0
+modVersion=21.0.1
 modAuthor=Fuzs, XFactHD
 modDescription=The core library behind the diagonal blocks mod series!
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21-v8
-dependenciesPuzzlesLibVersion=21.0.8
-dependenciesMinPuzzlesLibVersion=21.0.8
+dependenciesVersionCatalog=1.21-v23
+#dependenciesPuzzlesLibVersion=21.0.8
+#dependenciesMinPuzzlesLibVersion=21.0.8
 
 # Mod Publishing
 projectReleaseType=release
