--- a/1.21.3/gradle.properties
+++ b/1.21.3/gradle.properties
@@ -19,9 +19,9 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.3-v6
-dependenciesPuzzlesLibVersion=21.3.1
-dependenciesMinPuzzlesLibVersion=21.3.1
+dependenciesVersionCatalog=1.21.3-v9
+#dependenciesPuzzlesLibVersion=21.3.1
+#dependenciesMinPuzzlesLibVersion=21.3.1
 
 # Mod Publishing
 projectReleaseType=release
